# MKHA

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yaml  install.sh  pyproject.toml  requirements.txt
config/: ha_config.yaml.example
scripts/routeros/: ha_failover_hook.rsc  ha_health_check.rsc
src/: main.py  version.py
src/api/: routeros_client.py  ssh_client.py
src/cli/: menu.py
src/notifications/: notifier.py
src/provisioning/: __init__.py  engine.py  models.py  preflight.py  script_deploy.py  system_setup.py  verification.py  vrrp_setup.py
src/quorum/: health.py  manager.py
src/sync/: diff.py  engine.py  variable_translator.py
src/sync/sections/: __init__.py  base.py  bridge_vlan.py  dhcp_dns.py  firewall.py  routing.py  scripts.py  vpn.py
src/utils/: auth.py  backup.py  config.py  crypto.py  logging.py
src/vrrp/: controller.py
src/web/: app.py
src/web/static/: app.js  style.css
src/web/templates/: base.html  config.html  dashboard.html  diff.html  login.html  logs.html  provision.html  setup.html
tests/: test_api_client.py  test_auth.py  test_config.py  test_crypto.py  test_diff.py  test_quorum.py  test_variable_translator.py
