[project]
name = "mikrotik-ha"
version = "0.1.0"
description = "High Availability orchestrator for MikroTik RouterOS 7 router pairs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    "rich>=13.0",
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.scripts]
mkha = "src.main:main"
mkha-cli = "src.cli.menu:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
